@@ -26,6 +26,7 @@ documents those changes that are of interest to users and admins.
  -- Update documentation for sreport.
  -- BLUEGENE - fix regression in 2.1.10 on assigning multiple jobs to one block.
  -- Minor memory leak fixed when killing job error happens.
+ -- Fix sacctmgr list assoc when talking to a 2.2 slurmdbd.
 
 * Changes in SLURM 2.1.10
 =========================
